Lots of small cleanups, via automated code review tools.